# cleanersco

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
cleanersco/: __main__.py  config.py
cleanersco/core/decorators/: exceptions.py
cleanersco/core/services/: auth.py  logger.py
cleanersco/models/: job.py  user.py
cleanersco/services/: auth.py  job.py  user.py
cleanersco/utils/: docs.py
cleanersco/web/: __init__.py  app.py
cleanersco/web/api/: router.py
cleanersco/web/api/job/: __init__.py  router.py
cleanersco/web/api/users/: __init__.py  routes.py
prisma/: schema.prisma
